# hal

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  conanfile.txt
cmake/: osal.cmake
lib/: CMakeLists.txt  Hardware.cpp  ReturnDevice.cpp
lib/board/: CMakeLists.txt
lib/board/include/hal/: Board.hpp  IBoard.hpp
lib/board/sbc/raspberrypi/: BoardInit.cpp  BoardLinux.cpp  CMakeLists.txt
lib/board/sbc/raspberrypi/config/sbc/raspberrypi/: config.hpp
lib/board/sbc/raspberrypi/include/sbc/raspberrypi/: DeviceId.hpp
lib/board/test/gpio-set1/: BoardLinux.cpp  CMakeLists.txt
lib/board/test/gpio-set1/include/gpio-set1/: DeviceId.hpp
lib/board/test/gpio-set2/: BoardLinux.cpp  CMakeLists.txt
lib/board/test/gpio-set2/include/gpio-set2/: DeviceId.hpp
lib/board/test/hardware/: Board.cpp  BoardLinux.cpp  CMakeLists.txt
lib/board/test/hardware/include/hardware/: DeviceId.hpp
lib/board/test/middleware/: BoardInit.cpp  BoardLinux.cpp  CMakeLists.txt
lib/board/test/middleware/include/middleware/: DeviceId.hpp
lib/board/test/platform-gpio/: BoardInit.cpp  CMakeLists.txt
lib/board/test/q39tester-set1/: BoardInit.cpp  CMakeLists.txt
lib/board/test/uart-set1/: BoardInit.cpp  CMakeLists.txt
lib/drivers/: CMakeLists.txt
lib/drivers/eeprom/: CMakeLists.txt
lib/drivers/eeprom/generic/: CMakeLists.txt  GenericEeprom.cpp  GenericEeprom.hpp
lib/drivers/gpio/: CMakeLists.txt
lib/drivers/gpio/mcp23x17/: CMakeLists.txt  IMcp23x17.cpp  IMcp23x17.hpp  Mcp23017.cpp  Mcp23017.hpp  Mcp23S17.cpp  Mcp23S17.hpp  Mcp23x17Common.hpp
lib/drivers/rtc/: CMakeLists.txt
lib/drivers/rtc/m41t82/: CMakeLists.txt  M41T82.cpp  M41T82.hpp
lib/drivers/sensor/: CMakeLists.txt
lib/drivers/sensor/sht3xdis/: CMakeLists.txt  Sht3xDisHumidity.cpp  Sht3xDisHumidity.hpp  Sht3xDisSensor.cpp  Sht3xDisSensor.hpp  Sht3xDisTemperature.cpp  Sht3xDisTemperature.hpp
lib/logger/include/hal/logger/: hal.hpp
lib/platform/: CMakeLists.txt
lib/platform/linux/: CMakeLists.txt
lib/platform/linux/gpio/: CMakeLists.txt  LinuxGpio.cpp  LinuxGpio.hpp  SysFsGpio.hpp
lib/platform/linux/i2c/: CMakeLists.txt  LinuxI2c.cpp  LinuxI2c.hpp
lib/platform/linux/spi/: CMakeLists.txt  LinuxSpi.cpp  LinuxSpi.hpp
lib/platform/linux/uart/: CMakeLists.txt  LinuxUart.cpp  LinuxUart.hpp  TtyUart.cpp  TtyUart.hpp
lib/platform/test/: CMakeLists.txt
lib/platform/test/lib/test/: CMakeLists.txt
lib/platform/test/test/: CMakeLists.txt
lib/private/: CMakeLists.txt  II2c.cpp  ISpi.cpp
lib/private/include/hal/: Board.hpp  IBoard.hpp  ISimpleBoard.hpp
lib/private/include/hal/gpio/: GpioPort.hpp  GpioPortStub.hpp  IGpioPort.hpp  IGpioRegister.hpp  PinInput.hpp  PinOutput.hpp  PortInput.hpp  PortOutput.hpp
lib/private/include/hal/i2c/: II2c.hpp  ScopedI2c.hpp
lib/private/include/hal/spi/: ISpi.hpp  ScopedSpi.hpp
lib/product/: CMakeLists.txt  Hardware.cpp  returnDevice.cpp
lib/product/include/hal/: Hardware.hpp  ScopedDevice.hpp  factory.hpp
lib/product/test/gpio-set1/: CMakeLists.txt  Hardware.cpp
lib/product/test/gpio-set1/config/product/: config.hpp
lib/product/test/gpio-set1/include/product/: factory.hpp
lib/product/test/gpio-set2/: CMakeLists.txt  Hardware.cpp
lib/product/test/gpio-set2/config/product/: config.hpp
lib/product/test/gpio-set2/include/product/: factory.hpp
lib/product/test/hardware/: CMakeLists.txt  Hardware.cpp
lib/product/test/hardware/include/product/: factory.hpp
lib/product/test/middleware/: CMakeLists.txt  Hardware.cpp
lib/product/test/middleware/include/product/: factory.hpp
lib/product/test/platform-gpio/: CMakeLists.txt  Hardware.cpp
lib/product/test/platform-gpio/config/product/: config.hpp
lib/product/test/platform-gpio/include/product/: factory.hpp
lib/product/test/platform-uart/: CMakeLists.txt  Hardware.cpp
lib/product/test/platform-uart/config/product/: config.hpp
lib/product/test/platform-uart/include/product/: factory.hpp
lib/product/test/q39tester-set1/: CMakeLists.txt  Hardware.cpp
lib/product/test/q39tester-set1/config/product/: config.hpp
lib/product/test/q39tester-set1/include/product/: factory.hpp
lib/product/test/uart-set1/: Hardware.cpp
lib/product/test/uart-set1/config/product/: config.hpp
lib/product/test/uart-set1/include/product/: factory.hpp
lib/public/: CMakeLists.txt  Device.cpp  Error.cpp  IEeprom.cpp  IHumiditySensor.cpp  IRtc.cpp  ITemperatureSensor.cpp  IUart.cpp
lib/public/include/hal/: Device.hpp  Error.hpp  Hardware.hpp  ScopedDevice.hpp  factory.hpp  types.hpp
lib/public/include/hal/gpio/: IPinInput.hpp  IPinOutput.hpp  IPortInput.hpp  IPortOutput.hpp  types.hpp
lib/public/include/hal/sensor/: IHumiditySensor.hpp  ITemperatureSensor.hpp
lib/public/include/hal/storage/: IEeprom.hpp
lib/public/include/hal/time/: IRtc.hpp
lib/public/include/hal/uart/: IUart.hpp
lib/utils/logger/: CMakeLists.txt
lib/utils/logger/include/hal/utils/: logger.hpp
test/gpio-set1/: CMakeLists.txt  GpioPorts.cpp  SingleBits.cpp  gpio-set1.cmake
test/gpio-set2/: CMakeLists.txt  GpioPorts.cpp  gpio-set2.cmake
test/hardware/: CMakeLists.txt  hardware.cmake  initialization.cpp
test/hardware/init/freertos-arm/: CMakeLists.txt
test/hardware/init/linux/: CMakeLists.txt
test/middleware/: CMakeLists.txt  Error.cpp  ScopedDevice.cpp  initialization.cpp  middleware.cmake  settings.cmake
test/platform-gpio/: CMakeLists.txt  GpioPorts.cpp  SingleBits.cpp  settings.cmake
test/platform-uart/: CMakeLists.txt  ClientTests.cpp  settings.cmake
test/platform-uart/daemon/: client.py
test/q39tester/eeprom-set1/: CMakeLists.txt  EepromTests.cpp  settings.cmake
test/q39tester/gpio-set1/: 4PinPorts.cpp  CMakeLists.txt  MultithreadGpio.cpp  SingleBits.cpp  appMain.cpp  settings.cmake
test/q39tester/rtc-set1/: CMakeLists.txt  RtcTests.cpp  settings.cmake
test/q39tester/sensor-set1/: CMakeLists.txt  SensorTests.cpp  appMain.cpp  settings.cmake
test/uart-set1/: CMakeLists.txt  ClientTests.cpp  settings.cmake
test/uart-set1/daemon/: common.py  run.py  server.py
(+34 files in other folders)
